# OpenIris-ESPIDF

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  pytest_blink.py  sdkconfig  sdkconfig..board.project_babble  sdkconfig.base_defaults  sdkconfig.board.esp32AIThinker  sdkconfig.board.facefocusvr_eye  sdkconfig.board.facefocusvr_face  sdkconfig.board.project_babble  sdkconfig.board.wrover  sdkconfig.board.xiao-esp32s3  sdkconfig.board.xiao_esp32s3  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old  sdkconfig.xiao.copy
boards/: sdkconfig.base_defaults
boards/esp32AIThinker/: esp32AIThinker
boards/esp32Cam/: esp32Cam
boards/esp32M5Stack/: esp32M5Stack
boards/esp_eye/: esp_eye
boards/facefocusvr/: eye_L  eye_R  face
boards/project_babble/: project_babble
boards/seed_studio/: xiao_esp32s3
boards/wrooms3/: wrooms3
boards/wrooms3QIO/: wrooms3QIO
boards/wrover/: wrover
bootloader_components/: CMakeLists.txt  boot_hooks.c
components/CameraManager/: CMakeLists.txt  Kconfig.projbuild
components/CommandManager/: CMakeLists.txt
components/CommandManager/CommandManager/: CommandManager.cpp  CommandManager.hpp  CommandResult.cpp  CommandResult.hpp  CommandSchema.cpp  CommandSchema.hpp  Commands.cpp  Commands.hpp  DependencyRegistry.hpp
components/CommandManager/CommandManager/commands/: BaseCommand.hpp  camera_commands.cpp  camera_commands.hpp  config_commands.cpp  config_commands.hpp  device_commands.cpp  device_commands.hpp  mdns_commands.cpp  mdns_commands.hpp  scan_commands.cpp  scan_commands.hpp  simple_commands.cpp  simple_commands.hpp  wifi_commands.cpp  wifi_commands.hpp
components/Helpers/: CMakeLists.txt
components/LEDManager/: CMakeLists.txt
components/MDNSManager/: CMakeLists.txt
components/Monitoring/: CMakeLists.txt
components/OpenIrisTasks/: CMakeLists.txt
components/Preferences/: CMakeLists.txt
components/ProjectConfig/: CMakeLists.txt
components/RestAPI/: CMakeLists.txt
components/SerialManager/: CMakeLists.txt
components/SerialManager/SerialManager/: SerialManager.cpp  SerialManager.hpp  SerialManager_esp32.cpp  SerialManager_esp32s3.cpp
components/StateManager/: CMakeLists.txt
components/StreamServer/: CMakeLists.txt
components/UVCStream/: CMakeLists.txt
components/WebSocketLogger/: CMakeLists.txt
components/cJSON/: CMakeLists.txt
components/customSomething/: CMakeLists.txt
components/mongoose/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  openiris_main.cpp
tools/: openiris_setup.py  setup.bat  setup.sh  setup_openiris.py  switchBoardType.py  wifi_scanner.py
(+50 files in other folders)
